--- a/common-files/deploy.yml
+++ b/common-files/deploy.yml
@@ -22,7 +22,7 @@ jobs:
             });
 
             return response.data.head.ref;
-
+      - uses: olivercodes/owners-slash-command@v1.0.0
       - uses: actions/checkout@v2
         with:
           ref: ${{ steps.get-ref.outputs.result }}
