--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
             return response.data.head.ref;
       - uses: olivercodes/owners-slash-command@v1.0.4
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ORG_TOKEN }}
       - uses: actions/checkout@v2
         with:
           ref: ${{ steps.get-ref.outputs.result }}
